fixing header spacing

--- a/_sass/3-modules/_header.scss
+++ b/_sass/3-modules/_header.scss
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     padding: 40px $base-spacing-unit;
   }
 
